--- a/client/css/widgets/dice.css
+++ b/client/css/widgets/dice.css
@@ -128,7 +128,7 @@
   transform-style: preserve-3d;
   transform: rotateX(var(--rotX)) rotateY(var(--rotY)) rotateZ(var(--rotZ));
   animation: none;
-  transition: transform 0.5s;
+  transition: transform 0.5s cubic-bezier(0, 0, 0, 1.2);
 }
 
 .shape3D.dice.widget > .diceFaces > .diceFace {
@@ -166,6 +166,7 @@
 .d2-flip.dice.widget {
   --edgeColor: var(--backgroundColor);
 }
+
 .d2-flip.dice.widget > .diceFaces > .diceFace {
   transform-style: preserve-3d;
 }
