--- a/client/css/widgets/dice.css
+++ b/client/css/widgets/dice.css
@@ -8,9 +8,11 @@
   height: 100%;
   width: 100%;
   border-radius: inherit;
+  animation-duration: 0.5s;
+  transition-duration: 0.5s;
 }
 
-.dice.widget > .diceFaces > .diceFace {
+.dice.widget > * > .diceFace {
   position: absolute;
   display: none;
   top: 0;
@@ -38,20 +40,15 @@
   background-size: contain;
 }
 
-.dice.widget > .diceFaces > .active.diceFace {
+.dice.widget > * > .active.diceFace {
   display: flex;
 }
 
-.dice.widget > .diceFaces > .dicePip {
+.dice.widget > * > .dicePip {
   font-family: VTT-Symbols;
 }
 
-
-.dice.widget > .animate.diceFaces {
-  animation-duration: 0.5s;
-}
-
-.dice.widget > .animate.diceFaces > .diceFace {
+.dice.widget > .rolling > .diceFace {
   display: flex;
   --phase1: 0;
   --phase2: 0;
@@ -62,25 +59,24 @@
   animation-duration: inherit;
 }
 
-.dice.widget > .animateBegin.animate.diceFaces > .diceFace {
+.dice.widget > .rolling.animateBegin > .diceFace {
   opacity: var(--phase1);
   animation: none;
 }
 
-.dice.widget > .animate.diceFaces > .active.diceFace {
+.dice.widget > .rolling > .active.diceFace {
   --final: 1;
 }
 
-.dice.widget > .animate.diceFaces > .animate1active.diceFace {
+.dice.widget > .rolling > .rolling1active.diceFace {
   --phase1: 1;
 }
 
-.dice.widget > .animate.diceFaces > .animate2active.diceFace {
+.dice.widget > .rolling > .rolling2active.diceFace {
   --phase2: 1;
 }
 
-
-.shaking.dice.widget > .animate.diceFaces {
+.shaking.dice.widget > .rolling {
   animation-name: shake;
   --shakeX: 1;
   --shakeY: 1;
@@ -128,7 +124,7 @@
   transform-style: preserve-3d;
   transform: rotateX(var(--rotX)) rotateY(var(--rotY)) rotateZ(var(--rotZ));
   animation: none;
-  transition: transform 0.5s cubic-bezier(0, 0, 0, 1.2);
+  transition: transform 0.5s cubic-bezier(1, 1.65, 0.6, 0.85);
 }
 
 .shape3D.dice.widget > .diceFaces > .diceFace {
