d20 size and position

--- a/client/css/widgets/dice.css
+++ b/client/css/widgets/dice.css
@@ -537,7 +537,8 @@
 }
 
 .d20.dice.widget > .diceFaces {
-  ---translateZ: calc(var(--faceWidth) * -0.4);
+  --translateY: calc(100% * -1 / 6);
+  --translateZ: calc(var(--size) * -1 / 4);
 }
 
 .d20.dice.widget > * > .diceFace {
